<resources>
    <string name="app_name">CDDGame</string>
    <string name="alert_title">提醒</string>
    <string name="alert_PosOK">确定</string>

    <!-- Main Act -->
    <string name="str_MainAct_StartSingleGameButton">单机游戏</string>
    <string name="str_MainAct_StartOnlineGameButton">联机游戏</string>
    <string name="str_MainAct_WelcomeUser">欢迎用户</string>
    <string name="str_MainAct_WelcomeUserForFormat">欢迎 %s</string>
    <string name="str_MainAct_SettingButton">游戏设置</string>
    <string name="str_MainAct_LoginButton">游戏登录</string>
    <string name="str_MainAct_ShowNoLoginAlertMessage">未登录，请先登录在联机游戏。</string>

    <!-- Login Act -->
    <string name="str_LoginAct_Title">锄大地登录</string>
    <string name="str_LoginAct_UserNameTextView">用户名</string>
    <string name="str_LoginAct_UserNameEditTextHint">请输入用户名...</string>
    <string name="str_LoginAct_PassWordTextView">密码</string>
    <string name="str_LoginAct_LoginButton">登陆</string>
    <string name="str_LoginAct_NotLoginButton">跳过</string>
    <string name="str_LoginAct_RegisterButton">注册</string>
    <string name="str_LoginAct_CancelButton">返回</string>
    <string name="str_LoginAct_NoUserNameOrPassWordAlertMessage">没有输入用户名或密码。</string>
    <string name="str_LoginAct_NoUserAlertMessage">没有该用户。</string>
    <string name="str_LoginAct_ErrorPassWordAlertMessage">密码错误。</string>
    <string name="str_LoginAct_AlwaysExistUserAlertMessage">已经存在该用户。</string>
    <string name="str_LoginAct_ErrorPassWordFormatAlertMessage">密码格式错误。</string>
    <string name="str_LoginAct_ErrorRegisterAlertMessage">注册失败。</string>
    <string name="str_LoginAct_RegisterSuccessAlertMessage">注册成功，请登录。</string>
    <string name="str_LoginAct_LoginSuccessToast">用户 %s 登录成功</string>

    <!-- Setting Act -->
    <string name="str_SettingAct_BackButton">返回</string>
    <string name="str_SettingAct_OKButton">确定</string>
    <string name="str_SettingAct_ResetButton">重置</string>
    <string name="str_SettingAct_ReLoginButton">重新登录</string>
    <string name="str_SettingAct_SeekBarTextView">0%</string>
    <string name="str_SettingAct_SeekBarChangeTextView">%d%%</string>

    <!-- Gaming Act -->
    <string name="str_GamingAct_DefUserLeftTextView">Left User</string>
    <string name="str_GamingAct_DefUserUpTextView">Up User</string>
    <string name="str_GamingAct_DefUserRightTextView">Right User</string>
    <string name="str_GamingAct_DefUserDownTextView">Me</string>
    <string name="str_GamingAct_PassTextView">pass</string>

    <string name="str_GamingAct_OnlineCountDown">30</string>
    <string name="str_GamingAct_OnlineCountDownTimeOutToast">您已超时，自动 pass</string>
    <string name="str_GamingAct_SingleTextView">单机</string>
    <string name="str_GamingAct_OnlineTextView">联机</string>
    <string name="str_GamingAct_PauseGameButton">暂停</string>
    <string name="str_GamingAct_ExitGameButton">退出</string>
    <string name="str_GamingAct_PushCardButton">出牌</string>
    <string name="str_GamingAct_PassShowCardButton">跳过</string>
    <string name="str_GamingAct_DistributeCardButton">发牌</string>
    <string name="str_GamingAct_PrePareButton">准备</string>
    <string name="str_GamingAct_PrePareProgressDialog">准备中，已准备人数 (%d / 4)...</string>
    <string name="str_GamingAct_ShowConfirmExitGameAlertMessage">确定退出游戏？</string>
    <string name="str_GamingAct_ShowConfirmExitGameAlertPosButtonForExit">退出</string>
    <string name="str_GamingAct_ShowConfirmExitGameAlertNegButtonForCancel">取消</string>
    <string name="str_GamingAct_ShowNoSelectCardAlertMsg">没有选择想出的牌。</string>
    <string name="str_GamingAct_ShowCantShowCardForRuleAlertMsg">不符合规则的出牌。</string>
    <string name="str_GamingAct_ShowCantShowCardForRoundAlertMsg">还没轮到出牌。</string>
    <string name="str_GamingAct_ShowWinAlertMsg">用户 %s 胜出。</string>
    <string name="str_GamingAct_ShowWinAlertPosScore">查看排行榜</string>
    <string name="str_GamingAct_ShowWinAlertNegCancel">返回</string>

    <!-- Score Act -->
    <string name="str_ScoreAct_DownUserName">%s (自己): %d</string>
    <string name="str_ScoreAct_UpUserName">%s (上): %d</string>
    <string name="str_ScoreAct_LeftUserName">%s (左): %d</string>
    <string name="str_ScoreAct_RightUserName">%s (右): %d</string>
    <string name="str_ScoreAct_BackButton">返回</string>
    <string name="str_ScoreAct_SingleTextView">单机</string>
    <string name="str_ScoreAct_OnlineTextView">联机</string>

</resources>
